chore: bump to java 17